Generate new parametrized model
